# openai-agents-context-compaction

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  compatibility.yml
src/openai_agents_context_compaction/: __init__.py  _version.py  session.py
tests/: __init__.py  test_session.py  test_version.py
