[project]
name = "openai-agents-context-compaction"
version = "0.2.1"
description = "Context compaction for the OpenAI Agents SDK Runner loop"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Damian ONeill" }]
requires-python = ">=3.11"
keywords = [
    "openai",
    "agents",
    "context",
    "compaction",
    "compression",
    "memory",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = ["openai-agents>=0.1.0"]

[project.optional-dependencies]
tiktoken = ["tiktoken>=0.5.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.19.0",
    "ruff>=0.14.0",
    "commitizen>=3.0.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/damianoneill/openai-agents-context-compaction"
Repository = "https://github.com/damianoneill/openai-agents-context-compaction"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openai_agents_context_compaction"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
exclude = [".venv"]

[[tool.mypy.overrides]]
module = ["agents.*"]
ignore_missing_imports = true
ignore_errors = true

[[tool.mypy.overrides]]
module = ["tiktoken.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.2.1"
tag_format = "v$version"
version_files = [
    "pyproject.toml:^version",
    "src/openai_agents_context_compaction/_version.py:^__version__",
]
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"
major_version_zero = true
